src/test/ui/compile-fail-migration/method-call-lifetime-args.stderr
error[E0090]: too few lifetime parameters provided: expected 2 lifetime parameters, found 1 lifetime parameter
  --> $DIR/method-call-lifetime-args.rs:26:7
   |
LL |     S.early::<'static>();
   |       ^^^^^ expected 2 lifetime parameters

error[E0088]: too many lifetime parameters provided: expected at most 2 lifetime parameters, found 3 lifetime parameters
  --> $DIR/method-call-lifetime-args.rs:28:33
   |
LL |     S.early::<'static, 'static, 'static>();
   |                                 ^^^^^^^ expected 2 lifetime parameters

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:37:15
   |
LL |     S::late::<'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:14:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:39:15
   |
LL |     S::late::<'static, 'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:14:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:41:15
   |
LL |     S::late::<'static, 'static, 'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:14:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:44:21
   |
LL |     S::late_early::<'static, 'static>(S, &0);
   |                     ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:17:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:46:21
   |
LL |     S::late_early::<'static, 'static, 'static>(S, &0);
   |                     ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:17:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:50:24
   |
LL |     S::late_implicit::<'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:15:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:52:24
   |
LL |     S::late_implicit::<'static, 'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:15:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:54:24
   |
LL |     S::late_implicit::<'static, 'static, 'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:15:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:57:30
   |
LL |     S::late_implicit_early::<'static, 'static>(S, &0);
   |                              ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:18:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:59:30
   |
LL |     S::late_implicit_early::<'static, 'static, 'static>(S, &0);
   |                              ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:18:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:62:35
   |
LL |     S::late_implicit_self_early::<'static, 'static>(&S);
   |                                   ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:19:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:64:35
   |
LL |     S::late_implicit_self_early::<'static, 'static, 'static>(&S);
   |                                   ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:19:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:67:28
   |
LL |     S::late_unused_early::<'static, 'static>(S);
   |                            ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:20:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:69:28
   |
LL |     S::late_unused_early::<'static, 'static, 'static>(S);
   |                            ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:20:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^

error[E0090]: too few lifetime parameters provided: expected 2 lifetime parameters, found 1 lifetime parameter
  --> $DIR/method-call-lifetime-args.rs:73:5
   |
LL |     S::early::<'static>(S);
   |     ^^^^^^^^^^^^^^^^^^^ expected 2 lifetime parameters

error[E0088]: too many lifetime parameters provided: expected at most 2 lifetime parameters, found 3 lifetime parameters
  --> $DIR/method-call-lifetime-args.rs:75:34
   |
LL |     S::early::<'static, 'static, 'static>(S);
   |                                  ^^^^^^^ expected 2 lifetime parameters

error: aborting due to 18 previous errors

Some errors occurred: E0088, E0090.
For more information about an error, try `rustc --explain E0088`.
